samples/_failures_safe/1761564485_2380a5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_78947d04.c: In function ‘main’:
./samples/SAFE/__tmp_78947d04.c:173:12: error: missing terminating " character
  173 |     printf("Compressed data
      |            ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_78947d04.c:173:5: error: expected expression at end of input
  173 |     printf("Compressed data
      |     ^~~~~~
./samples/SAFE/__tmp_78947d04.c:173:5: error: expected declaration or statement at end of input
